[tool.poetry]
name = "rl-energyplus"
version = "0.8.0"
description = "EnergyPlus Gym Environments for Reinforcement Learning"
authors = ["Antoine Galataud <antoine@foobot.io>"]
packages = [
    { include = "rleplus" },
]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
ray = { version = "2.12.0", extras = ["default", "rllib"] }
gymnasium = "0.28.1"
numpy = "1.23.5"
protobuf = "3.20.3"
tensorboard = "^2.9.0"
torch = "^2.1.1"
pearl = { git = "https://github.com/facebookresearch/Pearl.git" }
scipy = "^1.10.0"

[tool.poetry.scripts]
rllib = "rleplus.train.rllib:main"
pearl = "rleplus.train.pearl:main"
tests = "tests:run"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
