[tool.poetry]
name = "rl-energyplus"
version = "0.11.0"
description = "EnergyPlus Gym Environments for Reinforcement Learning"
authors = ["Antoine Galataud <antoine@foobot.io>"]
packages = [
    { include = "rleplus" },
]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = "~3.12"
gymnasium = "^1.0.0"
numpy = "^2.1"
tensorboard = "^2.9.0"
ray = { version = "2.53.0", extras = ["default", "rllib"] }
torch = { version = "2.8.0", source = "pytorch-cpu" }
pearl = { git = "https://github.com/facebookresearch/Pearl.git" }
scipy = "^1.18.0"
pydantic = "2.13.4"

[tool.poetry.scripts]
rllib = "rleplus.train.rllib:main"
pearl = "rleplus.train.pearl:main"
tests = "tests:run"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
